hermes_fuzz_executed_few_shot/fuzz_81_execution
'use strict';
function foo() {}
class C {
    [foo()]();
}
new (class C {}) ();
let a = new C();
a[foo()]();


Execution Output ------------------:
test.js:4:14: error: '{' expected in method definition
    [foo()]();
    ~~~~~~~~~^
